# mastodon-tag-notifier

./: .env.example  .gitignore  Procfile  README.md  app.json  listener.py  mypy.ini  requirements.txt  setup.cfg
tag_notifier/: content.j2  listener.py  raw.j2  status_template.j2
test/: test.py
tests/: test.html  test.py
