[metadata]
name = tag_notifier
version = 0.0.0
url = https://github.com/yuji96/mastodon-tag-notifier
author = Yuji Yamamoto

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
install_requires =
    beautifulsoup4==4.9.3
    Mastodon.py==1.5.1
    python-dotenv==0.15.0
    Jinja2==2.11.3

[options.extras_require]
develop =
    flake8==3.8.4
    mypy==0.812
